Can now create new mesh inside an armature Add armature experimental note to fbx export dialog Fix timeline overflow issue

--- a/css/panels.css
+++ b/css/panels.css
@@ -1407,6 +1407,7 @@
 		background-color: var(--color-ui);
 		display: flex;
 		flex-direction: column;
+		min-height: 120px;
 	}
 	#timeline_vue {
 		flex-grow: 1;
